--- a/app/index.html
+++ b/app/index.html
@@ -31,11 +31,13 @@
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="components/angular-fire/angularFire.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/test.js"></script>
+    <script src="scripts/controllers/fathers.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
